assets/css/main.css
/* ... */
/* ==========================================================================
   Wrap Sections
   ========================================================================== */

#headerwrap {
    background: url(../img/header_bg.jpg) no-repeat center top;
    margin-top: -50px;
    padding-top:100px;
    text-align:center;
    background-attachment: relative;
    background-position: center center;
    min-height: 600px;
    width: 100%;
    
    -webkit-background-size: 100%;
    -moz-background-size: 100%;
    -o-background-size: 100%;
    background-size: 100%;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#headerwrap h1 {
    color:#333;
    margin-top: 110px;
    padding-bottom: 30px;
    letter-spacing: 8px;
    font-size: 50px;
    font-weight: bold;
    text-shadow: 1px 1px 1px #000;
}

#headerwrap h2 {
    color:#333;
    font-size: 30px;
    font-weight: 400;
    text-align: center;
    line-height: 40px;
    letter-spacing: 3px;
    margin-left: 15px;
    text-shadow: 1px 1px 1px #000;
}

#headerwrap p {
    font-size: 20px;
    text-shadow: none;
}

#greywrap {
    background: #f5f5f5;
    margin-top: 0px;
    padding-top: 40px;
    border-bottom: 1px solid #ddd;
    text-align: center;
}

#greywrap .callout {
    margin-bottom: 20px;
}

#greywrap p {
    margin-left: 30px;
    margin-right: 30px;
    letter-spacing: 1px;
    padding-top: 15px;
    padding-bottom: 15px;
}

#greywrap .icon {
    font-size: 60px;
    line-height: 30px;
    margin-bottom: 10px;
}

#footerwrap {
    background: #2b2b2b;
    margin-top: 0px;
    padding: 15px;
    border-bottom: 1px solid #ddd;
    text-align: center;
    text-shadow: 0 1px 3px rgba(0,0,0,.5);
}

#footerwrap h5 {
    font-size: 16px;
    color: rgba(255,255,255,.5);
}

#footerwrap a {
    color: #fff;
}
#footerwrap a:hover {
    text-decoration: underline;
}


.container h1 {
    text-transform: uppercase;
}

.footnote {
    line-height: 20px;
    border-top: 1px solid #ddd;
    padding: 20px;
    font-size: 14px;
}

/* ==========================================================================
   Box Sections
   ========================================================================== */

.white h1 {
    padding-top: 35px;
}

.white p {
    letter-spacing: 1px;
}
.white ul {
    letter-spacing: 1px;
}
/* Section Dividers */
.section-divider {
    z-index: 999;
    width: 100%;
    display: table;
    max-height: 450px;
    border-bottom: 2px solid #E6EAED;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    padding-top: 30px;
    padding-bottom: 70px;
    margin-top: 45px;


    background-position: center center;

    -webkit-background-size: 100%;
    -moz-background-size: 100%;
    -o-background-size: 100%;
    background-size: 100%;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    background-attachment: relative;
    
    text-align: center;
}

.textdivider h1 {
    padding-top: 70px;
    color: white;
    font-size: 40px;
}

.textdivider p {
    color: white;
    font-size: 25px;
}

.textdivider-light p, 
.textdivider-light h1 {
    color: #333;
}

.quotes {
    margin-right: 10px;
}


/* Section Dividers Backgrounds */

.divider1 {
    background-image: url('../img/bg/divider1.jpg')
}

.divider2 {
    background-image: url('../img/bg/divider2.jpg');
    height: 800px;
}

.divider3 {
    background-image: url('../img/bg/divider3.jpg');
    margin-top: 0px;
}

.divider4 {
    background-image: url('../img/bg/divider4.jpg')
}

.divider5 {
    background-image: url('../img/bg/divider5.jpg')
}

.divider6 {
    background-image: url('../img/bg/divider6.jpg')
}

/* ==========================================================================
   Diet Section
   ========================================================================== */
.diet h1 {
    text-shadow: 1px 1px 1px #000;
}

/* ==========================================================================
   Experience Section
   ========================================================================== */
.experience {
    width:200px;
    height:200px;
    border-radius:100px;
    font-size:50px;
    margin-left: auto;
    margin-right: auto;
    text-align:center;
    -webkit-box-shadow: 0 8px 6px -6px black;
    -moz-box-shadow: 0 8px 6px -6px black;
    box-shadow: 0 8px 6px -6px black;
    text-shadow: 2px 2px 2px #fff;
}
.experience h1 {
    font-size: 80px;
    font-weight: bold;
    padding-top: 10px;
    padding-bottom: 0px;
    color:#006B70;
    font-family: Arial;
}
.experience p {
    font-size: 22px;
    line-height: 20px;
    color:#006B70;
}


/* ==========================================================================
   Contact Information Section
   ========================================================================== */
.contact-info > p {
    display: table;
    margin: 0;
    padding-right: 30px;
}
.contact-info > p span {
    font-size: 20px;
    display: inline-block;
    display: table-cell;
    height: 100%;
    width: 30px;
    padding-right: 12px;
}


/* ==========================================================================
   News & Articles
   ========================================================================== */
.post-title {
    border-bottom: 1px solid #3498db;
    padding: 10px 0;
    text-transform: uppercase;
    display: inline-block;
    min-height: 75px;
    width: 100%;
}
.post-title a {
    color: #333;
}

.post-title a:hover,
.post-title a:focus {
    color: #c0392b;
}

.grid figure {
    margin: 0;
    position: relative;
}

.grid figure img {
    width: 100%;
    display: block;
    position: relative;
}

.grid figcaption {
    position: absolute;
    top: 0;
    left: 0;
    padding: 20px;
    color: #fff;
    background: #3498db;
}
/* ... */

